--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="12구획 웹페이지" />
     <meta itemprop="description" content="2025111668 채유현의 12구획 웹디자인 페이지입니다." />
-    <meta itemprop="image" content="12pages" />
+    <meta itemprop="image" content="12pages.png" />
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://yuhyeon375.github.io/pages/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="12구획 웹페이지" />
     <meta property="og:description" content="2025111668 채유현의 12구획 웹디자인 페이지입니다." />
-    <meta property="og:image" content="12pages" />
+    <meta property="og:image" content="12pages.png" />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="12구획 웹페이지" />
     <meta name="twitter:description" content="2025111668 채유현의 12구획 웹디자인 페이지입니다." />
-    <meta name="twitter:image" content="12pages" />
+    <meta name="twitter:image" content="12pages.png" />
 
 	<link rel="stylesheet" type="text/css "href="style1019.css">
 </head>
